--- a/OopsProject/OopsProject.csproj
+++ b/OopsProject/OopsProject.csproj
@@ -54,5 +54,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Source Code.txt" />
+    <Content Include="WriteUp.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
